@@ -1,2 +1,0 @@
-EXPORTS
-	mapGetDecoder
