@@ -1,3 +1,9 @@
+2009-07-17  Piotr Fusik  <fox@scene.pl>
+* gsplayer/gspasap.def, win32/Makefile:
+  compile GSPlayer plugin for Windows NT with MinGW
+  (by the way, Windows NT port of GSPlayer is discontinued)
+
+
 2009-07-15  Piotr Fusik  <fox@scene.pl>
 * win32/Makefile: converted from nmake to gmake
 
